--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -18,7 +18,8 @@
   padding: 3px 6px;
   text-align: center;
   text-decoration: none;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  cursor: pointer; }
 
 .easy-button {
   font-size: 20px;
@@ -237,6 +238,16 @@ p.success {
 #simpleTooltip.help {
   background: #EDEFF4;
   border: 1px solid #1D4088; }
+
+#recaptcha_container {
+  border: 1px solid #b3b3b3;
+  padding: 10px 10px 2px 10px;
+  margin: 10px 0px 10px 0px; }
+  #recaptcha_container #recaptcha_image {
+    background: white;
+    border: 1px solid #333; }
+  #recaptcha_container #recaptcha_label label {
+    margin-top: 8px; }
 
 #footer {
   width: 1000px;
