--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -21,6 +21,7 @@
   text-align: center;
   text-decoration: none;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  cursor: pointer;
 }
 
 .easy-button {
@@ -253,6 +254,22 @@ p.success {
 #simpleTooltip.help {
   background: #EDEFF4;
   border: 1px solid #1D4088;
+}
+
+#recaptcha_container {
+  border: 1px solid #b3b3b3;
+  padding: 10px 10px 2px 10px;
+  margin: 10px 0px 10px 0px;
+  #recaptcha_image {
+    background:white;
+    border: 1px solid #333;
+  }
+  #recaptcha_label {
+    label { margin-top:8px; }
+  }
+  #recaptcha_response_field {
+    
+  }
 }
 
 #footer {
