Signup page style updates

--- a/app/views/home/_signup_form.slim
+++ b/app/views/home/_signup_form.slim
@@ -33,4 +33,4 @@
   - unless hide_captcha
     = render 'shared/recaptcha'
   
-  = f.submit 'Sign Up'
+  = f.submit 'Sign Up', :class => 'pretty-button'
