--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -5,8 +5,7 @@
 
   .images
     img.lfloat src="/images/home-phone.png"
-    a.lfloat href="#"
-      img src="/images/home-help-button.png"
+    a.pretty-button.easy-button href="#" See&nbsp;How&nbsp;Easy&nbsp;It&nbsp;Is
 
 #signup-box
   div
