Refactored html structure of builder landing help section

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -36,13 +36,10 @@ h1 = @company.name
       .widget-editor
         #builder-help
           label To Start:
-          ul
-            li Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
-            li
-              img src="/images/builder-help-drag.png"
-            li.spacer
-            li.or OR
-            li Click on a widget in the Mobile Phone Emulator to enter your information.
-            li
-              img src="/images/builder-help-edit.png"
+          p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
+          img.help-img.first src="/images/builder-help-drag.png"
+          .spacer
+          .or OR
+          p Click on a widget in the Mobile Phone Emulator to enter your information.
+          img.help-img.second src="/images/builder-help-edit.png"
     .clearfix
