Privacy and terms copy updates

--- a/app/views/home/privacy.html
+++ b/app/views/home/privacy.html
@@ -1,3 +1,5 @@
+<div id="privacy">
+
 <h3>What information do we collect? </h3>
 
 <p>We collect information from you when you register on our site or fill out a form.</p>
@@ -63,11 +65,11 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 
 <h3>Terms and Conditions</h3>
 
-<p>Please also visit our Terms and Conditions section establishing the use, disclaimers, and limitations of liability governing the use of our website at  HYPERLINK "http://www.yomobi.com/" http://www.yomobi.com</p>
+<p>Please also visit our Terms and Conditions section establishing the use, disclaimers, and limitations of liability governing the use of our website at  <a href="http://www.yomobi.com/">http://www.yomobi.com</a></p>
 
 <h3>Your Consent</h3>
 
-<p>By using our site, you consent to our  HYPERLINK "http://www.freeprivacypolicy.com/" \t "_blank" websites privacy policy.</p>
+<p>By using our site, you consent to our websites privacy policy.</p>
 
 <h3>Changes to our Privacy Policy</h3>
 
@@ -84,3 +86,5 @@ Austin, Texas 78701<br />
 USA<br />
 support@yomobi.com<br />
 </p>
+
+</div>
