--- a/app/views/home/terms.html
+++ b/app/views/home/terms.html
@@ -1,3 +1,5 @@
+<div id="terms">
+
 <h2>Website Terms and Conditions of Use</h2>
 
 <p><b>1. User's Acknowledgment and Acceptance of Terms</b></p>
@@ -86,7 +88,7 @@
 
 <p>Designated Agent for Claimed Infringement:</p>
 
-<p>Contact: True Passion LLC<br />Address: 360 Nueces Street, Suite 1012, Austin, Texas 78701, USA<br />Phone: (512) 563-2553</p>
+<p>Contact: True Passion LLC<br />Address: Austin, Texas 78701, USA<br />Phone: (512) 410-8066</p>
 
 <p>You acknowledge and agree that upon receipt of a notice of a claim of copyright infringement, we may immediately remove the identified materials from our site without liability to you or any other party and that the claims of the complaining party and the party that originally posted the materials will be referred to the United States Copyright Office for adjudication as provided in the Digital Millennium Copyright Act.</p>
 
@@ -154,7 +156,7 @@
 
 <p><b>17. Notices</b></p>
 
-<p>All notices to a party shall be in writing and shall be made either via email or conventional mail. Notices to us must be sent to the attention of Customer Service at support@yomobi.com, if by email, or at True Passion LLC - 360 Nueces Street, Suite 1012, Austin, Texas 78701, USA if by conventional mail. Notices to you may be sent to the address supplied by you as part of your Registration Data. In addition, we may broadcast notices or messages through the site to inform you of changes to the site or other matters of importance, and such broadcasts shall constitute notice to you at the time of sending.</p>
+<p>All notices to a party shall be in writing and shall be made either via email or conventional mail. Notices to us must be sent to the attention of Customer Service at support@yomobi.com, if by email, or at True Passion LLC - Austin, Texas 78701, USA if by conventional mail. Notices to you may be sent to the address supplied by you as part of your Registration Data. In addition, we may broadcast notices or messages through the site to inform you of changes to the site or other matters of importance, and such broadcasts shall constitute notice to you at the time of sending.</p>
 
 <p><b>18. Entire Agreement</b></p>
 
@@ -176,7 +178,7 @@
 
 <p><b>20. Contact Information</b></p>
 
-<p>Except as explicitly noted on this site, the services available through this site are offered by True Passion LLC, an Limited Liability Company, located at 360 Nueces Street, Suite 1012, Austin, Texas 78701, USA. Our telephone number is (512) 563-2553. If you notice that any user is violating these Terms of Use, please contact us at support@yomobi.com.</p><h2>Blog and Message Board Terms of Use</h2>
+<p>Except as explicitly noted on this site, the services available through this site are offered by True Passion LLC, an Limited Liability Company, located at Austin, Texas 78701, USA. Our telephone number is (512) 410-8066. If you notice that any user is violating these Terms of Use, please contact us at support@yomobi.com.</p><h2>Blog and Message Board Terms of Use</h2>
 
 <p>True Passion LLC (&quot;We&quot; or &quot;Us&quot; or &quot;Our&quot;) offers the use of its blogging and message board services (along with the content posted thereon, the &quot;Services&quot;) subject to the terms and conditions of use (the &quot;Terms&quot;) contained herein. All references herein to &quot;We,&quot; &quot;Us,&quot; or &quot;Our&quot; are intended to include True Passion LLC and any other affiliated companies. By accessing, creating or contributing to any blogs or messages hosted by us (the &quot;Blog&quot;), and in consideration for the Services we provide to you, you agree to abide by these Terms. Please read them carefully before posting to or creating any Blog. We reserve the right to change, at any time, at our sole discretion, the Terms under which these Services are offered. You are responsible for regularly reviewing these Terms for changes. Your continued use of the Services constitutes your acceptance of all such Terms. If you do not agree with these Terms, please do not use the Services.</p>
 
@@ -230,3 +232,4 @@
 
 <p>Use of this website constitutes acceptance of these Terms. You acknowledge that you have read and are bound by the Terms, as well as any other usage agreements of Ours, including the Website Terms of Use that may govern your conduct. Thank you for participating in the Blog. Please do not hesitate to contact us at support@yomobi.com if you have questions.</p>
 
+</div>
