--- a/app/views/signup/default/step-2.slim
+++ b/app/views/signup/default/step-2.slim
@@ -16,7 +16,7 @@
     input name="step_data[address][addr2]" type="text"
     label City:
     input name="step_data[address][city]" type="text"
-    label State:
+    label State / Province / Territory:
     input name="step_data[address][state]" type="text"
     label Zip / Postal Code:
     input name="step_data[address][zip]" type="text"
