--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -1,5 +1,9 @@
 Thanks for using YoMobi. A customer has left a message and requested that you call back at (<%=@params[:customer_phone] %>). Here's what he/she said:
-<br /><br />
-<blockquote><%= @params[:customer_message] %></blockquote>
-<br /><br />
+<br />
+<br />
+
+| <%= @params[:customer_message] %>
+<br />
+<br />
+
 You can respond to this customer via the phone number he/she provided: <%= @params[:customer_phone] %>
