--- a/app/views/user_mailer/email_follower.html.erb
+++ b/app/views/user_mailer/email_follower.html.erb
@@ -1,5 +1,9 @@
-<p><%= @params[:content] %></p>
+<%= @params[:content] %>
+<br />
+<br />
 
-<p>You are receiving this email because you opted to receive emails from <%= @params[:company_name] %> through their mobile site.</p>
+You are receiving this email because you opted to receive emails from <%= @params[:company_name] %> through their mobile site.
+<br />
+<br />
 
-<p>To opt out of further emails from this company, <a href="<%= @params[:short_url] %>">click here.</a></p>
+To opt out of further emails from this company, <a href="<%= @params[:short_url] %>">click here.</a>
