--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -1,6 +1,11 @@
 Thanks for using YoMobi. A customer has given you feedback using your mobile YoMobi website! Here's what he/she said:
-<br /><br />
-<blockquote>Subject: <%= @params[:customer_subject] %></blockquote>
-<blockquote><%= @params[:customer_feedback] %></blockquote>
-<br /><br />
+<br />
+<br />
+
+| Subject: <%= @params[:customer_subject] %>
+<br />
+| <%= @params[:customer_feedback] %>
+<br />
+<br />
+
 You can respond to this customer via the email address he/she provided: <%= @params[:customer_email] %>
