--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -1,11 +1,15 @@
-<p>Thank you for registering your new mobile-version website. You are now ready to spread the information about you or your business to people on-the-go, to reach them on their mobile device! All desktop websites are not optimized to view on smart phones and will take longer to load pages to it, with your new Yomobi site, it is now easy.</p>
+Thank you for registering your new mobile-version website. You are now ready to spread the information about you or your business to people on-the-go, to reach them on their mobile device! All desktop websites are not optimized to view on smart phones and will take longer to load pages to it, with your new Yomobi site, it is now easy.
+<br />n
+<br />
 
-<p>Let customers view your full website on mobile phone to auto direct it here. Just add the short HTML code to your website's home/index page. You can access this code under the General Settings link of your Mobile Site Builder.</p>
+Let customers view your full website on mobile phone to auto direct it here. Just add the short HTML code to your website's home/index page. You can access this code under the General Settings link of your Mobile Site Builder.
+<br />
+<br />
 
-<p>To access your account, <a href="http://yomobi.com/">follow this link</a>.</p>
+To access your account, <a href="http://yomobi.com/">follow this link</a>.
+<br />
+<br />
 
-<p>
 Best Wishes,<br />
 YoMobi Team<br />
 <a href="mailto:support@yomobi.com">support@yomobi.com</a>
-</p>
