Updated welcome email copy

--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -1,12 +1,20 @@
-Thank you for registering your new mobile-version website. You are now ready to spread the information about you or your business to people on-the-go, to reach them on their mobile device! All desktop websites are not optimized to view on smart phones and will take longer to load pages to it, with your new Yomobi site, it is now easy.
-<br />n
+Welcome to the mobile-version of your website. This complements the functionality of your existing website to easily view on mobile phones. All desktop websites are not optimized to view on smart phones and will take longer to load pages to it, with your new Yomobi site, it is now easy. You can reach and more customers on their mobile device!
+<br />
 <br />
 
-Let customers view your full website on mobile phone to auto direct it here. Just add the short HTML code to your website's home/index page. You can access this code under the General Settings link of your Mobile Site Builder.
+We have provided a short HTML code ready for you to implement on the index page of your full website. Once implemented, your customers can seamlessly view the mobile version of your site if they input your full website address on their mobile phones. You can access this code under the <a href="http://www.yomobi.com/builder/main#edit-settings">General Settings</a> link of your Mobile Site Builder.
+<br />
+<br />
+
+Start advertising your full website and you have now confidence that this will load easily on mobile devices.
 <br />
 <br />
 
 To access your account, <a href="http://yomobi.com/">follow this link</a>.
+<br />
+<br />
+
+To access your Mobile Redirect HTML code, <a href="http://www.yomobi.com/builder/main#edit-settings">Follow this link</a>.
 <br />
 <br />
 
