Business hours widget copy tweak

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -492,7 +492,7 @@
       label Allow users to opt-in for text messages.
   
   script.hours-edit-area(type="text/template")
-    p Click to checkmark the days you are open:
+    p Set your business hours:
     .double-time
       input type="checkbox" name="doubleTime"
       b Specify two sets of hours for each day.
