--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,4 +1,4 @@
 #nav
   a href=destroy_user_session_path Sign Out
-  a href=account_path My Account
+  a href=account_path Account Settings
   a href=builder_main_path Website Builder
