Refactored ads into a single partial

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -11,28 +11,14 @@
         td.wtab
   - if @is_mobile
     .ad-bar
-      javascript:
-        window.googleAfmcRequest = {
-          client: 'ca-mb-pub-2309168908133247',
-          format: '320x50_mb',
-          output: 'html',
-          slotname: '7752788998'
-        };
-      script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js"
+      = render 'mobile/adsense'
 #canvas
   #home.page
     #home-widgets.content.dbx-group
     - if @is_mobile
       .ad-bar.bottom
         div align="center"
-        javascript:
-          window.googleAfmcRequest = {
-            client: 'ca-mb-pub-2309168908133247',
-            format: '320x50_mb',
-            output: 'html',
-            slotname: '7752788998'
-          };
-        script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js"
+        = render 'mobile/adsense'
     - if @is_mobile
       .mobile-footer
         = render 'mobile/social-share'
