Show builder help content after deleting a widget

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -34,12 +34,5 @@ h1 = @company.name
         em Click on a widget in the Mobile Phone Emulator to edit it here.
       .divider style="border-color:#E0E1E2;margin:0 10px 10px 10px"
       .widget-editor
-        #builder-help
-          label To Start:
-          p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
-          img.help-img.first src="/images/builder-help-drag.png"
-          .spacer
-          .or OR
-          p Click on a widget in the Mobile Phone Emulator to enter your information.
-          img.help-img.second src="/images/builder-help-edit.png"
+        = render 'builder/builder-help'
     .clearfix
