--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -14,7 +14,7 @@
         td.name {{ prettyName }}
   
   script.edit-widget-idle(type="text/template")
-    img src="/images/home-help.png"
+    = render 'builder/builder-help'
   
   script.edit-widget(type="text/template")
     .header
