--- a/app/views/registrations/new.slim
+++ b/app/views/registrations/new.slim
@@ -1,4 +1,4 @@
-= form_for resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => 'center-box', :id => 'signin-box' } do |f|
+#signin-box.center-box
   
   h2 YoMobi Signup
 
@@ -13,30 +13,5 @@
         a href=session_path(:user) Click here to sign in
   
   #actual-signin-box
-    .group.clearfix
-      label First Name:
-      = f.text_field :first_name
-    .group.clearfix
-      label Last Name:
-      = f.text_field :last_name
-    .group.clearfix
-      label Email:
-      = f.text_field :email
-    .group.clearfix
-      label Password:
-      = f.password_field :password
-    .group.clearfix
-      label Re-enter Password:
-      = f.password_field :password_confirmation
-    .group.clearfix
-      label Business Type:
-      = f.select :company_type_id, options_for_select(company_types, @user.company_type_id)
-    .group.clearfix
-      - unless @hide_captcha
-        p Enter both words below, separated by a space:
-        = recaptcha_tags
-        p Can't read the words above? Try different words or an audio captcha.
-    .meta-group
-      .main-btn.lfloat
-        input.content type="submit" value="Sign Up"
+    = render :partial => 'home/signup_form', :locals => {:hide_captcha => false}
   .clearfix
