Added help bubble

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -23,6 +23,8 @@
         input type="text" name="wname" value="{{ prettyName }}" maxlength="22"
       .widget-name
         | {{ prettyName }}
+        a.help-bubble href="#"
+          img src="/images/ui/help-bubble.png"
         span.change-label  Click&nbsp;to&nbsp;Edit
       p.help-text
         em {{ helpText }}
