--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -85,7 +85,7 @@
 .home-icon.editing {
   background: url(/images/ui/highlight.png) no-repeat 0px 1px !important;
   .title {
-    color: #ffffff;
+    color: #333333;
     font-weight: bold; } }
 
 .home-icon.invalid {
@@ -127,10 +127,25 @@
       padding-left: 14px; } } }
 
 #builder-help {
-  ul { padding: 0; list-style: none; }
-  li { margin: 8px 0; padding: 0; }
-  .spacer {}
-  .or {}
+  color: #203360;
+  label {
+    font-weight: bold;
+    font-size: 18px;
+    padding: 0px;
+    margin: 15px 0px 20px 0px;
+  }
+  .first {
+    margin-left: -2px;
+  }
+  .or {
+    border-top:1px solid #203360;
+    border-bottom:1px solid #203360;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 25px 0px 25px 0px;
+    padding: 10px 0px 10px 0px;
+    text-align: center;
+  }
 }
 
 #builder .widget-editor {
@@ -409,6 +424,10 @@
     padding: 0px;
     margin-top: 13px;
     font-size: 90%;} }
+
+#builder input[name="back"] {
+  margin-right:16px
+}
 
 .wysiwyg {
   input[type=text] {
