--- a/public/stylesheets/sass/constants.scss
+++ b/public/stylesheets/sass/constants.scss
@@ -24,15 +24,16 @@ $widget-editor-width: $content-width - 2px - $emulator-width - 8px;
 $sidebar-widgets-height: 515px;
 
 $font-size-body: 12px;
-$font-size-em: 12px;
-$font-size-day-name: 14px;
 $font-size-button: 14px;
+$font-size-day-name: 14px;
+$font-size-em: 12px;
 $font-size-input: 12px;
 $font-size-input-button: 14px;
-$font-size-label: 14px;
+$font-size-label: 12px;
 $font-size-label-current-link: 14px;
 $font-size-p: 110%;
 $font-size-select: 12px;
+$font-size-signup-bar: 14px;
 $font-size-title: 110%;
 $font-size-textarea: 100%;
 $font-size-tooltip: 100%;
