--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -289,11 +289,11 @@ p.success {
   font-size: 12px;
  .copyright {
    float: left;
-   margin: 5px 60px 0 0;
+   margin: 5px 60px 0 30px;
   }
   .site-links {
     float: right;
-    margin: 5px 0 0 0;
+    margin: 5px 30px 0 0;
     a, a:visited { color: #000; }
   }
 }
@@ -335,4 +335,3 @@ label.help { padding-bottom: 4px; }
 
 .hide {
   display: none; }
-
