Fixed a bug where the help bubble was disappearing after the user changes his mind about editing a widget's name

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -22,7 +22,7 @@
       .widget-name-edit
         input type="text" name="wname" value="{{ prettyName }}" maxlength="22"
       .widget-name
-        | {{ prettyName }}
+        span {{ prettyName }}
         a.help-bubble href="#"
           img src="/images/ui/help-bubble.png"
         span.change-label  Click&nbsp;to&nbsp;Edit
