--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -31,11 +31,17 @@
   #sidebar .option.active {
     background-color: #d8dfea; }
   #sidebar .home-icon {
-    width: 150px;
+    width: 182px;
     height: auto;
     padding: 1px 0 0px 5px;
     margin: 1px 0;
     cursor: pointer; }
+    #sidebar .home-icon .add {
+      visibility: hidden; }
+    #sidebar .home-icon .add.left {
+      float: left; }
+    #sidebar .home-icon .add.right {
+      float: right; }
     #sidebar .home-icon .title {
       width: auto;
       padding: 2.5px 0 0 4px;
@@ -43,24 +49,29 @@
       height: auto;
       font-weight: bold;
       font-size: 110%;
+      float: left;
       color: #333; }
     #sidebar .home-icon .icon {
-      margin: 0;
       float: left;
+      margin: 0;
       width: 18px;
       height: 18px; }
   #sidebar .home-icon:hover {
     background: url(/images/ui/yellowbg-small.png); }
+    #sidebar .home-icon:hover .add {
+      visibility: visible; }
   #sidebar .home-icon.singletonInUse {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
     -moz-opacity: 0.5;
     -khtml-opacity: 0.5;
     opacity: 0.5; }
+    #sidebar .home-icon.singletonInUse .add {
+      visibility: hidden !important; }
 
 #sidebar .widgets {
   height: 515px;
-  padding-left: 20px;
+  padding-left: 2px;
   overflow: auto; }
 
 #content {
