--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -35,11 +35,18 @@
   .option.active {
     background-color: $highlight-color; }
   .home-icon {
-    width: 150px;
+    width: 182px;
     height: auto;
     padding: 1px 0 0px 5px;
     margin: 1px 0;
     cursor: pointer;
+    .add { visibility: hidden; }
+    .add.left {
+      float: left;
+    }
+    .add.right {
+      float: right;
+    }
     .title {
       width: auto;
       padding: 2.5px 0 0 4px;
@@ -47,25 +54,30 @@
       height: auto;
       font-weight: bold;
       font-size: $font-size-title;
+      float: left;
       color: #333; }
     .icon {
-      margin: 0;
       float: left;
+      margin: 0;
       width: 18px;
       height: 18px; } }
   .home-icon:hover {
     background: url(/images/ui/yellowbg-small.png);
-     }
+    .add { visibility: visible; }
+  }
   .home-icon.singletonInUse {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity = 50);
     -moz-opacity: 0.5;
     -khtml-opacity: 0.5;
-    opacity: 0.5; } }
+    opacity: 0.5;
+    .add { visibility: hidden !important; }
+  }
+}
 
 #sidebar .widgets {
   height: $sidebar-widgets-height;
-  padding-left: 20px;
+  padding-left: 2px;
   overflow: auto; }
 
 #content {
