Added shortening of category breadcrumbs

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -203,6 +203,7 @@
       .back-bar
         .back-btn
         .title
+        .clearfix
       .content
   
   #dialog-invalid-drag title="Oops"
@@ -641,3 +642,4 @@
     | <% } %>
 
 #wname-test
+#cat-crumbs-test
