--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -55,7 +55,9 @@ a img {
   background: url(/images/ui/bg-back-bar.png) repeat-x;
   color: gray; }
   .back-bar .title {
+    float: left;
     padding-top: 3px;
+    width: 250px;
     height: 36px; }
     .back-bar .title h3 {
       font-weight: bold;
@@ -271,3 +273,13 @@ a img {
   font-size: 15px; }
 .page .content.category .desc.long {
   width: 100%; }
+
+#cat-crumbs-test {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999999999;
+  background-color: #ff0000;
+  text-align: left;
+  font-weight: bold;
+  font-size: 12px; }
