--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -476,7 +476,7 @@
     .explanation
       p This widget allows visitors to your mobile site to become fans and follow your latest news via email and text notifications.
       p You can send email notifications and instant messages to your followers by clicking on the “Email your Followers” or "Send Text to Your Followers" link in the navigation column on the left.
-    label Provide your email address to receive opt-ins*:
+    label Your Email Address*:
     input name="email" type="text" value="{{ _maybe.email }}"
     br
     .opt-in-select
