Restyled wysiwyg buttons

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -48,7 +48,7 @@
   script.edit-tab-bar(type="text/template")
     .header.edit-tab-bar
       .widget-name
-        | Editing Tab Bar
+        | Edit/Arrange Mobile Tab Bar
       p.help-text
         em Give your users access to key widgets from anywhere on your mobile site.
     div class="edit-area"
